@startuml
skinparam classAttributeIconSize 0

class ShipOccupancyUI{
}

class ShipOccupancyController {
+ averageOccupancyRate(int mmsi)
}

class ConnectionFactory {
+ getInstance()
+ getDatabaseConnection()
}

class CargoManifestStore {
+ averageOccupancyRate(DatabaseConnection databaseConnection, int mmsi, String startDate)
}

class DatabaseConnection {
+ getConnection()
}

ShipOccupancyController <.up. ShipOccupancyUI
ShipOccupancyController "1" --> "1..*" ConnectionFactory : uses
ShipOccupancyController "1" --> "1" CargoManifestStore : uses
CargoManifestStore "1" --> "1..*" DatabaseConnection : uses



@enduml